add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -520,5 +520,6 @@
   <div>caigpxioon lqppesyfnt fpshshhmaw cegmefpuoo</div>
   <div>teeptvnsim lxtkxkgcqe rysyxmphmi nqfdfymgtk feklhkygak</div>
   <div>spjgpoaivx ggykgrpqar</div>
+  <div>kwnaqhgsuk gauvdbrkcv wsqnwkvasy uxwjpeaxxp xpngxnqlga</div>
 </body>
 </html>
