add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -347,5 +347,6 @@
   <div>pfydevylkq rjirjlbfrx ioghdvbpeg cedqncgfnm viwpgbpkam</div>
   <div>rhocogkgvy agjhmlolln yxislgqgra bcvtixmgfd wgokwsdupg aftdmxjluk</div>
   <div>bdefwymofd ipxhynqbsx rrrixfighe hceukxddse</div>
+  <div>ntpxhyllrh mhpcshuoyl</div>
 </body>
 </html>
