add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -304,5 +304,6 @@
   <div>msuampvcxr lwtqlmdksn nlayiwupxg kjdepwmgkj bkfhaoixos vfhbrhyjyr ykfhajyldt fhgsnxuuqb wtwxddldir htwfyrttve</div>
   <div>cacfnapkob dxgdkbefds bhvehbhnhb vqfprocutr oeckislqjm</div>
   <div>wdpqxftrds tgqnfcrprk bhngaxruva asmgqibkmt bqklaolbee soitudyftv vdheuragbd mfudsppgcq uibmloeamy yxcwqukprg</div>
+  <div>phnckctdti rsjnkplvey wmeyvwtiva bklpcinplb hekvyjasos lbghuoxikc</div>
 </body>
 </html>
