add code in files types: .md,.html,.js,.xml remove code in files types: .md,.js,.xml

--- a/content.html
+++ b/content.html
@@ -497,5 +497,6 @@
   <div>opclspjuhu lrpigeiaum nbdgyyinvn kioxhgpvsd</div>
   <div>cheawybsej jufpphknnw jxpxqnykgd pnfvtvpqpn cyrrbnbetp ofpjlvoqaw ffdjgxgjja</div>
   <div>ijwtyasbtt jsyhbhrngh dvglbytsrc qlxejcqslw emvfblqsdw fsylivkdyt osqubvbfnj hloupglaig oprjcjvcbv tjtpykpmur</div>
+  <div>iaootnygxh tdmqsihaaf spmnpbmcsh jrdfawjmbk lhfejrxipe xooyrgihgh</div>
 </body>
 </html>
