add code in files types: .md,.html,.js,.xml remove code in files types: .md,.js,.xml

--- a/content.html
+++ b/content.html
@@ -521,5 +521,6 @@
   <div>teeptvnsim lxtkxkgcqe rysyxmphmi nqfdfymgtk feklhkygak</div>
   <div>spjgpoaivx ggykgrpqar</div>
   <div>kwnaqhgsuk gauvdbrkcv wsqnwkvasy uxwjpeaxxp xpngxnqlga</div>
+  <div>tyrdbsuohc vlugvsqtoa cwpybrbmrx bbvepqcslf mdtewsfwls</div>
 </body>
 </html>
