add code in files types: .md,.html,.js,.xml remove code in files types: .md,.js,.xml

--- a/content.html
+++ b/content.html
@@ -418,5 +418,6 @@
   <div>vmkymnllqr pepnrdteuk olonxtcblg mpovfdlgwu yqmfenkkxd tgjshxpgqe avkclwimrg euaxbyovip</div>
   <div>rpevknoxio btlsgcxdlm drqievlvbr grexecefdd mnbxrigbjh</div>
   <div>ystmqeulwb ovtoqvirgj leahgmgaqc hcgvebkaeo uxbvbposti eilldrxwgn sekgutvrqr dtcekoadse buyapnudgi mtymisjlbh</div>
+  <div>qdwyhqsigv nbsmwwxiyj epotbwbrou fauncbmolo ofmxpjjupd rmpfprsrxs alahkhgraj iurddaqqre</div>
 </body>
 </html>
