add code in files types: .md,.html,.js,.xml remove code in files types: .md,.js,.xml

--- a/content.html
+++ b/content.html
@@ -348,5 +348,6 @@
   <div>rhocogkgvy agjhmlolln yxislgqgra bcvtixmgfd wgokwsdupg aftdmxjluk</div>
   <div>bdefwymofd ipxhynqbsx rrrixfighe hceukxddse</div>
   <div>ntpxhyllrh mhpcshuoyl</div>
+  <div>dslhjysbks krseqwluaf khfyipksij xihnocvoxj qoainoemip bopevureal jkopkojxrd qxxqktsncr</div>
 </body>
 </html>
