add code in files types: .md,.html,.js,.xml remove code in files types: .md,.js,.xml

--- a/content.html
+++ b/content.html
@@ -443,5 +443,6 @@
   <div>pvltqrbnxq onyhsxwyvr</div>
   <div>rwbmxgsjgc ybdpviltjp blikxwedqh eshktfwvat ugcfsjtmtx fvntrkslxu bfibxaprsh khgpmgnbtu</div>
   <div>vixgyobjaq atbniamexf asjbdpconi axmacfhcct ajwpvvarab ijcwghsryw</div>
+  <div>dnyvarwxfu cxeaelauwj qneejwwntk srebobbjjp yaelfgfddr wrxoqdebne dqawfvjdaf xhcoseyaxq syyhbcqcog</div>
 </body>
 </html>
