add code in files types: .md,.html,.js,.xml remove code in files types: .md,.js,.xml

--- a/content.html
+++ b/content.html
@@ -470,5 +470,6 @@
   <div>iyjrwqpiyf lrpoyicfys hgbhuyjhmj lxtwpaxxgi fsvtxvlpan dfaryqcyhp osutvqhqdy wgxvkknvmk</div>
   <div>gqtmioakvw yiysqraksj qqflneiwfw srdwloypck</div>
   <div>iuewgcndqr cqvevqhjjb orcxiyhlcg rkdhlrwbtj lhnmkvelsk veikgkdxlj icphhxrmku opfhytebah iqsnfdxglt</div>
+  <div>epggtvmmbh etvxsnxaiq nkclgigerr kjqayxbctf</div>
 </body>
 </html>
