add code in files types: .md,.html,.js,.xml remove code in files types: .md,.xml

--- a/content.html
+++ b/content.html
@@ -395,5 +395,6 @@
   <div>yqeyhvqqqk</div>
   <div>opmtjuenot</div>
   <div>asubjkwmsw nmglkbfvte</div>
+  <div>nisgheprwc biggmsbaay yferuvmush yvurhbpejx gejqdpytpk</div>
 </body>
 </html>
