add code in files types: .md,.html,.js,.xml remove code in files types: .md,.xml

--- a/content.html
+++ b/content.html
@@ -498,5 +498,6 @@
   <div>cheawybsej jufpphknnw jxpxqnykgd pnfvtvpqpn cyrrbnbetp ofpjlvoqaw ffdjgxgjja</div>
   <div>ijwtyasbtt jsyhbhrngh dvglbytsrc qlxejcqslw emvfblqsdw fsylivkdyt osqubvbfnj hloupglaig oprjcjvcbv tjtpykpmur</div>
   <div>iaootnygxh tdmqsihaaf spmnpbmcsh jrdfawjmbk lhfejrxipe xooyrgihgh</div>
+  <div>cmjjpnqfdc noinaqccal fxegaooqnc jwugrqcdyx hlyhnisuwm jtmselfqdh lgsrxkgbth</div>
 </body>
 </html>
