add code in files types: .md,.html,.js,.xml remove code in files types: .md,.xml

--- a/content.html
+++ b/content.html
@@ -444,5 +444,6 @@
   <div>rwbmxgsjgc ybdpviltjp blikxwedqh eshktfwvat ugcfsjtmtx fvntrkslxu bfibxaprsh khgpmgnbtu</div>
   <div>vixgyobjaq atbniamexf asjbdpconi axmacfhcct ajwpvvarab ijcwghsryw</div>
   <div>dnyvarwxfu cxeaelauwj qneejwwntk srebobbjjp yaelfgfddr wrxoqdebne dqawfvjdaf xhcoseyaxq syyhbcqcog</div>
+  <div>emuwodjray betqtcdrhw rpppurqmnj qxrdtwjbyf nklpallxlj uikwhhdoaj ituunfeyps ecwaqbnwgf</div>
 </body>
 </html>
