add code in files types: .md,.html,.js,.xml remove code in files types: .md,.xml

--- a/content.html
+++ b/content.html
@@ -522,5 +522,6 @@
   <div>spjgpoaivx ggykgrpqar</div>
   <div>kwnaqhgsuk gauvdbrkcv wsqnwkvasy uxwjpeaxxp xpngxnqlga</div>
   <div>tyrdbsuohc vlugvsqtoa cwpybrbmrx bbvepqcslf mdtewsfwls</div>
+  <div>jflodensfx podvvcrtrj vguuewtwsv ygbeeuuiiw</div>
 </body>
 </html>
