add code in files types: .md,.html,.js,.xml remove code in files types: .md,.xml

--- a/content.html
+++ b/content.html
@@ -373,5 +373,6 @@
   <div>lywjmhgluw</div>
   <div>ndxfvuyjiq wryxdwumri sygypcyxka bgvnduywog axnouepqxw edumrkqtra</div>
   <div>enybhfoegg rjbfpgwtar sbptxqhutq qlkemqxfol yvevwgvwgp gvjialdxwd ytexrusvyp bkgfwqjcyc wmhlkstsyl bjpgeydqgq</div>
+  <div>vkuoqvhhrk jyyylwteid yailvmidjm</div>
 </body>
 </html>
