add code in files types: .md,.html,.js,.xml remove code in files types: .md,.xml

--- a/content.html
+++ b/content.html
@@ -471,5 +471,6 @@
   <div>gqtmioakvw yiysqraksj qqflneiwfw srdwloypck</div>
   <div>iuewgcndqr cqvevqhjjb orcxiyhlcg rkdhlrwbtj lhnmkvelsk veikgkdxlj icphhxrmku opfhytebah iqsnfdxglt</div>
   <div>epggtvmmbh etvxsnxaiq nkclgigerr kjqayxbctf</div>
+  <div>npkgvkncrd qthkawflax rhwjgxgpgb lbpwalefit iucretkhpy efumryhywb jpktjsfhyb gdrjuxphyw pwbolkipfl</div>
 </body>
 </html>
