add code in files types: .md,.html,.js,.xml remove code in files types: .md,.xml

--- a/content.html
+++ b/content.html
@@ -349,5 +349,6 @@
   <div>bdefwymofd ipxhynqbsx rrrixfighe hceukxddse</div>
   <div>ntpxhyllrh mhpcshuoyl</div>
   <div>dslhjysbks krseqwluaf khfyipksij xihnocvoxj qoainoemip bopevureal jkopkojxrd qxxqktsncr</div>
+  <div>qleoptgrkr bdwqddusux hhiwjqqbis</div>
 </body>
 </html>
