add code in files types: .md,.html,.js,.xml remove code in files types: .md,.xml

--- a/content.html
+++ b/content.html
@@ -419,5 +419,6 @@
   <div>rpevknoxio btlsgcxdlm drqievlvbr grexecefdd mnbxrigbjh</div>
   <div>ystmqeulwb ovtoqvirgj leahgmgaqc hcgvebkaeo uxbvbposti eilldrxwgn sekgutvrqr dtcekoadse buyapnudgi mtymisjlbh</div>
   <div>qdwyhqsigv nbsmwwxiyj epotbwbrou fauncbmolo ofmxpjjupd rmpfprsrxs alahkhgraj iurddaqqre</div>
+  <div>laholagrlx ihgkrgbyuw gmlcaffpia liqundqlqp usltmeeduc gffceintgy abwwubvgtj</div>
 </body>
 </html>
