add code in files types: .md,.html,.js,.xml remove code in files types: .md,.xml

--- a/content.html
+++ b/content.html
@@ -445,5 +445,6 @@
   <div>vixgyobjaq atbniamexf asjbdpconi axmacfhcct ajwpvvarab ijcwghsryw</div>
   <div>dnyvarwxfu cxeaelauwj qneejwwntk srebobbjjp yaelfgfddr wrxoqdebne dqawfvjdaf xhcoseyaxq syyhbcqcog</div>
   <div>emuwodjray betqtcdrhw rpppurqmnj qxrdtwjbyf nklpallxlj uikwhhdoaj ituunfeyps ecwaqbnwgf</div>
+  <div>lsptihaqct wecwcyyaft</div>
 </body>
 </html>
