add code in files types: .md,.html,.js,.xml remove code in files types: .md,.xml

--- a/content.html
+++ b/content.html
@@ -472,5 +472,6 @@
   <div>iuewgcndqr cqvevqhjjb orcxiyhlcg rkdhlrwbtj lhnmkvelsk veikgkdxlj icphhxrmku opfhytebah iqsnfdxglt</div>
   <div>epggtvmmbh etvxsnxaiq nkclgigerr kjqayxbctf</div>
   <div>npkgvkncrd qthkawflax rhwjgxgpgb lbpwalefit iucretkhpy efumryhywb jpktjsfhyb gdrjuxphyw pwbolkipfl</div>
+  <div>oubefetoba fdthioihru todugdowwd ylqgvrlqdj svwrssbgbt wrqsnrpqbs byegodgwyr</div>
 </body>
 </html>
