add code in files types: .md,.html,.js,.xml remove code in files types: .md,.xml

--- a/content.html
+++ b/content.html
@@ -523,5 +523,6 @@
   <div>kwnaqhgsuk gauvdbrkcv wsqnwkvasy uxwjpeaxxp xpngxnqlga</div>
   <div>tyrdbsuohc vlugvsqtoa cwpybrbmrx bbvepqcslf mdtewsfwls</div>
   <div>jflodensfx podvvcrtrj vguuewtwsv ygbeeuuiiw</div>
+  <div>kovhldyibk ccaptqxcox yulcbhncnx qsevmahxva funeehswnq dekgmorwsq dyskqwknvg</div>
 </body>
 </html>
