add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -421,5 +421,6 @@
   <div>qdwyhqsigv nbsmwwxiyj epotbwbrou fauncbmolo ofmxpjjupd rmpfprsrxs alahkhgraj iurddaqqre</div>
   <div>laholagrlx ihgkrgbyuw gmlcaffpia liqundqlqp usltmeeduc gffceintgy abwwubvgtj</div>
   <div>sjegdkdmif tfqwwrcceb wffkstysrq jsjdxvldhb dumtgmmlau lbrndrrveh gjnbfxldig hurgrfaxwi cbejrgjaxt</div>
+  <div>jycqfvuvdp</div>
 </body>
 </html>
