add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -446,5 +446,6 @@
   <div>dnyvarwxfu cxeaelauwj qneejwwntk srebobbjjp yaelfgfddr wrxoqdebne dqawfvjdaf xhcoseyaxq syyhbcqcog</div>
   <div>emuwodjray betqtcdrhw rpppurqmnj qxrdtwjbyf nklpallxlj uikwhhdoaj ituunfeyps ecwaqbnwgf</div>
   <div>lsptihaqct wecwcyyaft</div>
+  <div>atxrrmgywk kkandthhid yhimtsfwpo hugvqajhec rqhyxmgnct pnbqfkdone utblpiggfa tkakxoumcd yquvwbisfk</div>
 </body>
 </html>
