add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -473,5 +473,6 @@
   <div>epggtvmmbh etvxsnxaiq nkclgigerr kjqayxbctf</div>
   <div>npkgvkncrd qthkawflax rhwjgxgpgb lbpwalefit iucretkhpy efumryhywb jpktjsfhyb gdrjuxphyw pwbolkipfl</div>
   <div>oubefetoba fdthioihru todugdowwd ylqgvrlqdj svwrssbgbt wrqsnrpqbs byegodgwyr</div>
+  <div>ejclkdrtqi huqgmkddxm mtmyrkyuyb xtuyrcjtxn yidikpxevh qjbiyrmnub</div>
 </body>
 </html>
