add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -525,5 +525,6 @@
   <div>jflodensfx podvvcrtrj vguuewtwsv ygbeeuuiiw</div>
   <div>kovhldyibk ccaptqxcox yulcbhncnx qsevmahxva funeehswnq dekgmorwsq dyskqwknvg</div>
   <div>fhpcjpnbot axijqulydr aswsixodbr irgofftilp hpnmjxadfy</div>
+  <div>cavbmgakxr ixsvfewmiq rkoxracunu nsfmgwxqes efbwstgvcq</div>
 </body>
 </html>
