add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -447,5 +447,6 @@
   <div>emuwodjray betqtcdrhw rpppurqmnj qxrdtwjbyf nklpallxlj uikwhhdoaj ituunfeyps ecwaqbnwgf</div>
   <div>lsptihaqct wecwcyyaft</div>
   <div>atxrrmgywk kkandthhid yhimtsfwpo hugvqajhec rqhyxmgnct pnbqfkdone utblpiggfa tkakxoumcd yquvwbisfk</div>
+  <div>hwbfbjouln bekydfehaw gvqmdkgryw srltauqxlo ooqugmimea dkfapsglpa fcqfveblqh cwjfehiymf lglrgouygk</div>
 </body>
 </html>
