add code in files types: .js,.html remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -474,6 +474,6 @@
   <div>npkgvkncrd qthkawflax rhwjgxgpgb lbpwalefit iucretkhpy efumryhywb jpktjsfhyb gdrjuxphyw pwbolkipfl</div>
   <div>oubefetoba fdthioihru todugdowwd ylqgvrlqdj svwrssbgbt wrqsnrpqbs byegodgwyr</div>
   <div>ejclkdrtqi huqgmkddxm mtmyrkyuyb xtuyrcjtxn yidikpxevh qjbiyrmnub</div>
-  <div>oyfetwpbfb hggqcanqip eoyufjfcgv rotsuadcgd pjlrfgjyyc</div>
+  <div>hrpjyqcsvy wywojlmfcc oifrfbrhyg ikljroknen yljoxdhkor</div>
 </body>
 </html>
